# sepay

./: README.md  main.py  pyproject.toml  sepay-bank-accounts-api.json  sepay-qr-code-api.json  sepay-transactions-api.json  sepay-webhooks-api.json
sepay/: __init__.py  client.py  webhooks.py
sepay/api/: __init__.py  bank_accounts.py  qr_code.py  transactions.py
sepay/models/: __init__.py  bank_account.py  transaction.py  webhook.py
sepay/webhooks/: __init__.py
tests/: test_client.py  test_webhooks.py
