[tool.poetry]
name = "sepay-sdk"
version = "0.1.0"
description = "Python SDK for SePay payment integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "sepay"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 